--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/Panel.scss
@@ -9,7 +9,7 @@
 */
 
 @include extjs-panel-ui(
-  $ui: 'reset-tokens',
+  $ui: 'subsection',
 
   $ui-header-color: #333333,
   $ui-header-padding: 25px 0 0 0 !important,
@@ -18,12 +18,16 @@
 );
 
 .feature-content {
-  .x-panel-reset-tokens {
+  .x-panel-subsection {
     border-top: 1px #aaaaaa solid;
-    margin: 0 10px 0 10px !important;
+    margin: 0 10px 20px 10px !important;
     left: 0 !important;
     .x-toolbar {
       padding-left: 0;
+    }
+
+    &.no-border {
+      border-top: none;
     }
   }
 }
