Brings colors more in-line with the 8shapes visual index

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
@@ -6,6 +6,9 @@
  * Colors
  */
 
+// Transparency
+$color-none:               rgba(0, 0, 0, 0);
+
 // Shell
 $color-black:              #000000;
 $color-night-rider:        #333333;
