--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/Panel.scss
@@ -11,16 +11,16 @@
 @include extjs-panel-ui(
   $ui: 'subsection',
 
-  $ui-header-color: #333333,
+  $ui-header-color: $color-night-rider,
   $ui-header-padding: 25px 0 0 0 !important,
   $ui-header-font-size: 16px,
-  $ui-header-background-color: #ffffff,
+  $ui-header-background-color: $color-white,
   $ui-header-line-height: 20px
 );
 
 .feature-content {
   .x-panel-subsection {
-    border-top: 1px #aaaaaa solid;
+    border-top: 1px $color-gray solid;
     margin: 0 10px 20px 10px !important;
     left: 0 !important;
     .x-toolbar {
