--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/toolbar/TextItem.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/toolbar/TextItem.scss
@@ -6,7 +6,7 @@
  * cls: 'product-name'
  */
 .product-name {
-  color: #FFFFFF;
+  color: $color-white;
   font-size: 20px;
   font-weight: 200px;
 }
@@ -15,7 +15,7 @@
  * cls: 'product-version'
  */
 .product-version {
-  color: #FFFFFF;
+  color: $color-white;
   font-size: 10px;
   letter-spacing: 1px;
   top: 15px !important;
@@ -25,7 +25,7 @@
  * cls: 'feature-name'
  */
 .feature-name {
-  color: #000000;
+  color: $color-black;
   font-size: 26px;
   font-weight: bold;
 }
@@ -34,7 +34,7 @@
  * cls: 'feature-description'
  */
 .feature-description {
-  color: #000000;
+  color: $color-black;
   font-size: 12px;
   top: 21px !important;
 }
