Ties text body size and colors to 8shapes visual index

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
@@ -91,20 +91,24 @@ $color-dark-jewel:         #0C4F26;
  * Type styles
  */
 
-$font-size-h1:        40px;
-$font-size-h2:        26px;
-$font-size-h3:        22px;
-$font-size-h4:        18px;
-$font-size-h5:        16px;
-$font-size-body:      16px;
-$font-size-code:      16px;
-$font-size-utility:   14px;
+$font-size-h1:          40px;
+$font-size-h2:          26px;
+$font-size-h3:          22px;
+$font-size-h4:          18px;
+$font-size-h5:          16px;
+$font-size-body:        13px; // Should be 16px eventually, work towards that end
+$font-size-code:        16px;
+$font-size-utility:     14px;
+$font-size-small:       12px;
+$font-size-miniscule:   10px;
 
-$font-weight-h1:      100;
-$font-weight-h2:      bold;
-$font-weight-h3:      bold;
-$font-weight-h4:      bold;
-$font-weight-h5:      bold;
-$font-weight-body:    normal;
-$font-weight-code:    normal;
-$font-weight-utility: normal;
+$font-weight-h1:        100;
+$font-weight-h2:        bold;
+$font-weight-h3:        bold;
+$font-weight-h4:        bold;
+$font-weight-h5:        bold;
+$font-weight-body:      normal;
+$font-weight-code:      normal;
+$font-weight-utility:   normal;
+$font-weight-small:     normal;
+$font-weight-miniscule: bold;
