--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/Component.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/Component.scss
@@ -7,3 +7,4 @@ $base-color: $color-charcoal !default;
 
 // Use the same font-family for everything
 $font-family: 'Proxima Nova', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
+$color: $color-night-rider;
