--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_01.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_01.css
@@ -5879,7 +5879,7 @@ a.x-tab .x-tab-inner-right {
 /* including package ext-theme-neutral */
 /* line 1, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/Component.scss */
 .x-body {
-  color: black;
+  color: #333333;
   font-size: 13px;
   font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background: #f5f5f5;
@@ -7443,7 +7443,7 @@ a.x-tab .x-tab-inner-right {
 /* */
 /* line 262, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/button/Button.scss */
 .x-btn-default-small .x-btn-inner {
-  font-size: 16px;
+  font-size: 13px;
   font-weight: normal;
   font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
@@ -8955,7 +8955,7 @@ a.x-tab .x-tab-inner-right {
 /* */
 /* line 262, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/button/Button.scss */
 .x-btn-default-toolbar-small .x-btn-inner {
-  font-size: 16px;
+  font-size: 13px;
   font-weight: normal;
   font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #666666;
@@ -15341,7 +15341,7 @@ div.x-lbl-top-err-icon {
 
 /* line 26, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/form/Labelable.scss */
 .x-form-item-label {
-  color: black;
+  color: #333333;
   font: normal 13px/17px "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin-top: 4px;
 }
@@ -15365,7 +15365,7 @@ div.x-lbl-top-err-icon {
 
 /* line 1, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/form/field/Base.scss */
 .x-form-field {
-  color: black;
+  color: #333333;
 }
 
 /* line 6, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/form/field/Base.scss */
@@ -15402,7 +15402,7 @@ div.x-lbl-top-err-icon {
 
 /* line 1, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/form/field/Text.scss */
 .x-form-text {
-  color: black;
+  color: #333333;
   padding: 4px 6px 3px 6px;
   background: white repeat-x 0 0;
   border-width: 1px;
@@ -15452,7 +15452,7 @@ textarea.x-form-empty-field {
 /* line 11, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/form/field/Display.scss */
 .x-form-display-field {
   font: normal 13px/17px "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: black;
+  color: #333333;
   margin-top: 4px;
 }
 
@@ -15571,12 +15571,12 @@ textarea.x-form-empty-field {
 
 /* line 22, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/form/CheckboxGroup.scss */
 .x-form-check-group-label {
-  color: black;
+  color: #333333;
   padding: 2px;
   margin: 0 30px 5px 0;
   border-width: 0 0 1px 0;
   border-style: solid;
-  border-color: black;
+  border-color: #333333;
 }
 
 /* line 1, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/form/FieldSet.scss */
@@ -15990,7 +15990,7 @@ a.x-datepicker-arrow:hover {
 /* line 94, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/picker/Date.scss */
 .x-datepicker-column-header {
   width: 30px;
-  color: black;
+  color: #333333;
   font: bold 13px "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: right;
   background-image: none;
@@ -16015,14 +16015,14 @@ a.x-datepicker-arrow:hover {
 .x-datepicker-date {
   padding: 0 7px 0 0;
   font: normal 13px "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: black;
+  color: #333333;
   cursor: pointer;
   line-height: 23px;
 }
 
 /* line 138, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/picker/Date.scss */
 a.x-datepicker-date:hover {
-  color: black;
+  color: #333333;
   background-color: #eeeeee;
 }
 
@@ -16046,14 +16046,14 @@ a.x-datepicker-date:hover {
 /* line 159, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/picker/Date.scss */
 .x-datepicker-prevday .x-datepicker-date,
 .x-datepicker-nextday .x-datepicker-date {
-  color: #bfbfbf;
+  color: #f2f2f2;
 }
 
 /* line 166, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/picker/Date.scss */
 .x-datepicker-disabled a.x-datepicker-date {
   background-color: #eeeeee;
   cursor: default;
-  color: gray;
+  color: #b3b3b3;
 }
 
 /* line 174, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/picker/Date.scss */
@@ -16115,7 +16115,7 @@ a.x-datepicker-date:hover {
 /* line 239, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/picker/Date.scss */
 .x-monthpicker-item-inner {
   margin: 0 5px 0 5px;
-  color: black;
+  color: #333333;
   border-width: 1px;
   border-style: solid;
   border-color: white;
@@ -20280,7 +20280,7 @@ a.x-color-picker-item:hover {
 /* */
 /* line 262, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/button/Button.scss */
 .x-btn-plain-toolbar-small .x-btn-inner {
-  font-size: 16px;
+  font-size: 13px;
   font-weight: normal;
   font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #666666;
@@ -23955,7 +23955,7 @@ a.x-color-picker-item:hover {
 /* */
 /* line 262, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/button/Button.scss */
 .x-btn-primary-small .x-btn-inner {
-  font-size: 16px;
+  font-size: 13px;
   font-weight: normal;
   font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
@@ -24462,7 +24462,7 @@ a.x-color-picker-item:hover {
 /* */
 /* line 262, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/button/Button.scss */
 .x-btn-danger-small .x-btn-inner {
-  font-size: 16px;
+  font-size: 13px;
   font-weight: normal;
   font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
