--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -90,5 +90,5 @@
 
   $ui-header-padding: 4px,
   $ui-header-color: $color-white,
-  $ui-header-background-color: $color-black
+  $ui-header-background-color: $color-smalt
 );
