rename 'sorted-tabpanel' ui to 'light', define tab and bar specifically to control attributes easier move application of ui: 'light' to surrounding containers away from SortedPanel helper

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss
@@ -3,56 +3,134 @@
  */
 
 /**
- * @class NX.ext.tab.SortedPanel
- * ui: 'sorted-tabpanel'
+ * ui: 'light'
  */
 
-@include extjs-tab-panel-ui(
-  $ui: 'sorted-tabpanel',
+@include extjs-panel-ui(
+  $ui: 'light',
 
-  // text colors
-  $ui-tab-color: $color-night-rider,
-  $ui-tab-color-over: $color-night-rider,
+  $ui-header-color: $color-night-rider,
+  $ui-header-background-color: $color-light-smoke,
+  $ui-header-font-size: 16px,
+  $ui-header-line-height: 20px
 
-  // tab border and backgrounds
-  $ui-tab-border-color: $color-light-smoke,
-  $ui-tab-background-color: $color-light-smoke,
+  // FIXME: Unable to control icon spacing, unsure why
+  //$ui-header-icon-spacing: 6px,
+  //$ui-header-icon-height: 16px,
+  //$ui-header-icon-width: 16px,
+  //$ui-header-icon-background-position: $panel-header-icon-background-position, // center center
 
-  $ui-tab-border-color-active: $color-light-gray,
-  $ui-tab-background-color-active: $color-white,
-
-  $ui-tab-border-color-over: $color-light-gray,
-  $ui-tab-background-color-over: $color-gainsboro,
-
-  // background color of tab-bar
-  $ui-bar-background-color: $color-light-smoke,
-
-  // strip under the tab-bar
-  $ui-strip-height: 1px,
-  $ui-strip-background-color: $color-light-gray,
-
-  // FIXME: WTF does this control?
-  $ui-tab-border-width: 0px
+  // FIXME: Unable to control glyph colors here, unsure why
+  //$ui-header-glyph-color: $color-smalt,
+  //$ui-header-glyph-opacity: 1
 );
 
-// add few pixel to keep tabs seperated from surrounding container
-.x-tab-bar-body-sorted-tabpanel-top,
-.x-tab-bar-body-sorted-tabpanel-left,
-.x-tab-bar-body-sorted-tabpanel-right {
+@include extjs-tab-ui(
+  $ui: 'light',
+
+  $ui-background-color: $color-light-smoke,
+  $ui-background-color-over: $color-light-gray,
+  $ui-background-color-active: $color-white,
+  $ui-background-color-disabled: $color-light-smoke,
+  //$ui-border-radius: $tab-border-radius,
+  //$ui-border-width: $tab-border-width,
+  $ui-margin: 0 1px 0 0,
+  $ui-padding: 8px 12px 7px,
+  $ui-text-padding: 0,
+  $ui-border-color: $color-light-gray,
+  $ui-border-color-over: $color-light-gray,
+  $ui-border-color-active: $color-light-gray,
+  $ui-border-color-disabled: $color-light-gray,
+  //$ui-cursor: $tab-cursor,
+  //$ui-cursor-disabled: $tab-cursor-disabled,
+  //$ui-font-size: $tab-font-size,
+  //$ui-font-size-over: $tab-font-size-over,
+  //$ui-font-size-active: $tab-font-size-active,
+  //$ui-font-size-disabled: $tab-font-size-disabled,
+  //$ui-font-weight: $tab-font-weight,
+  //$ui-font-weight-over: $tab-font-weight-over,
+  //$ui-font-weight-active: $tab-font-weight-active,
+  //$ui-font-weight-disabled: $tab-font-weight-disabled,
+  //$ui-font-family: $tab-font-family,
+  //$ui-font-family-over: $tab-font-family-over,
+  //$ui-font-family-active: $tab-font-family-active,
+  //$ui-font-family-disabled: $tab-font-family-disabled,
+  //$ui-line-height: $tab-line-height,
+  $ui-color: $color-night-rider,
+  $ui-color-over: $color-night-rider,
+  $ui-color-active: $color-night-rider,
+  $ui-color-disabled: $color-night-rider,
+  //$ui-background-gradient: $tab-background-gradient,
+  //$ui-background-gradient-over: $tab-background-gradient-over,
+  //$ui-background-gradient-active: $tab-background-gradient-active,
+  //$ui-background-gradient-disabled: $tab-background-gradient-disabled,
+  $ui-inner-border-width: 0px,
+  //$ui-icon-width: $tab-icon-width,
+  //$ui-icon-height: $tab-icon-height,
+  //$ui-icon-spacing: $tab-icon-spacing,
+  //$ui-icon-background-position: $tab-icon-background-position,
+  //$ui-glyph-color: $tab-glyph-color,
+  //$ui-glyph-color-over: $tab-glyph-color-over,
+  //$ui-glyph-color-active: $tab-glyph-color-active,
+  //$ui-glyph-color-disabled: $tab-glyph-color-disabled,
+  //$ui-glyph-opacity: $tab-glyph-opacity,
+  //$ui-glyph-opacity-disabled: $tab-glyph-opacity-disabled,
+  //$ui-opacity-disabled: $tab-opacity-disabled,
+  //$ui-text-opacity-disabled: $tab-text-opacity-disabled,
+  //$ui-icon-opacity-disabled: $tab-icon-opacity-disabled,
+  //$ui-closable-icon-width: $tab-closable-icon-width,
+  //$ui-closable-icon-height: $tab-closable-icon-height,
+  //$ui-closable-icon-top: $tab-closable-icon-top,
+  //$ui-closable-icon-right: $tab-closable-icon-right,
+  //$ui-closable-icon-spacing: $tab-closable-icon-spacing,
+
+  $ui-border-bottom-color: $tabbar-strip-border-color
+);
+
+@include extjs-tab-bar-ui(
+  $ui: 'light',
+
+  // 2px so we can color border top and bottom, less than 2x will show background of header
+  $ui-strip-height: 2px,
+  $ui-strip-border-width: 1px,
+  $ui-strip-plain-border-width: 1px,
+  $ui-strip-border-color: $color-light-gray,
+  $ui-strip-background-color: $color-white,
+
+  $ui-border-width: 0px,
+  $ui-padding: 0px,
+  $ui-background-color: $color-light-smoke,
+  $ui-background-gradient: $tabbar-background-gradient
+
+  //$ui-scroller-width: $tabbar-scroller-width,
+  //$ui-scroller-cursor: $tabbar-scroller-cursor,
+  //$ui-scroller-cursor-disabled: $tabbar-scroller-cursor-disabled,
+  //$ui-scroller-opacity: $tabbar-scroller-opacity,
+  //$ui-scroller-opacity-over: $tabbar-scroller-opacity-over,
+  //$ui-scroller-opacity-pressed: $tabbar-scroller-opacity-pressed,
+  //$ui-scroller-opacity-disabled: $tabbar-scroller-opacity-disabled
+);
+
+// FIXME: Only apply for top, right and left tabs need additional tweaks
+
+// add few pixel to keep tabs separated from surrounding container
+.x-tab-bar-body-light-top {
   padding-left: 5px;
 }
 
+// Set bottom border of tab-strip
+.x-tab-bar-strip-light-top {
+  border-bottom: 1px solid $color-white;
+}
+
 // match non-active tab bottom-border color of strip under tab-bar
-.x-tab-sorted-tabpanel-top,
-.x-tab-sorted-tabpanel-left,
-.x-tab-sorted-tabpanel-right {
-  border-bottom: 1px solid $color-light-gray;
+.x-tab-light-top {
+  // no boarders for non-active tabs, when these have borders it shifts buttons down 1px and messes up the tab-strip
+  border: 0px;
 }
 
 // match active tab border color of strip under tab-bar, except bottom which should be white to match tab contents
-.x-tab-sorted-tabpanel-top-active,
-.x-tab-sorted-tabpanel-left-active,
-.x-tab-sorted-tabpanel-right-active {
+.x-tab-light-top-active {
   border-top: 1px solid $color-light-gray;
   border-right: 1px solid $color-light-gray;
   border-bottom: 1px solid $color-white;
